# brevia-template

./: .env.sample  .gitignore  README.md  pyproject.toml  test_service.yml.sample
.github/workflows/: release.yml
